# OMNISCREATOR

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  index.html  omnibrain_state.json
.github/workflows/: build-omnidirectx.yml  build-omnivalkin.yml  deploy-godhead-dashboard.yml  evolve-omnibrain.yml  omnibrain.yml  omnidirectx12.yml  omnivalkin.yml
godhead-dashboard/: .deploy-stamp  omnibrain_state.json  omnisurf.js  server.py
include/: EconomicOrganism.hpp  FloatGenMatrix.hpp  OmniBrainReserveNexus.hpp  UIRenderer.hpp
omnibrain-core/: OmniBrainSphere.hpp  run_godhead.py
omnibrain-core/bridge/: omnibrain_bridge.js
omnibrain-core/include/: OMNIBRAIN_Godhead.h
omnibrain-core/python/: __init__.py  reserve_nexus.py  syndicate.py
omnidirectxinfinity/shaders/: LightCodeCompute.hlsl  OmniBrainSphere.hlsl
scripts/: extract_state.cpp  local_godhead.sh
shaders/glsl/: lightcode_compute.comp  omnibrain_sphere.frag  omnibrain_sphere.vert
src/: main.cpp
